--- a/package.json
+++ b/package.json
@@ -47,5 +47,5 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   },
-  "homepage": "https://thisisyjin.github.io/PM/"
+  "homepage": "https://thisisyjin.github.io/PM"
 }
