--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mise",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://thisisyjin.github.io/PM",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
