--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mise",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://thisisyjin.github.io/PM",
+  "homepage": "http://thisisyjin.github.io/PM",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
